src/styles/custom-properties.css
@import url("./custom-media.css");

:root {
  --leu-color-black-100: #000;
  --leu-color-black-80: #333;
  --leu-color-black-60: #666;
  --leu-color-black-40: #949494;
  --leu-color-black-20: #ccc;
  --leu-color-black-10: #f0f0f0;
  --leu-color-black-5: #f7f7f7;
  --leu-color-black-0: #fffffe;

  --leu-color-black-transp-80: rgb(0 0 0 / 80%);
  --leu-color-black-transp-60: rgb(0 0 0 / 60%);
  --leu-color-black-transp-40: rgb(0 0 0 / 40%);
  --leu-color-black-transp-20: rgb(0 0 0 / 20%);
  --leu-color-black-transp-10: rgb(0 0 0 / 10%);
  --leu-color-black-transp-5: rgb(0 0 0 / 5%);

  --leu-color-white-transp-90: rgb(255 255 255 / 90%);
  --leu-color-white-transp-70: rgb(255 255 255 / 70%);
  --leu-color-white-transp-40: rgb(255 255 255 / 40%);
  --leu-color-white-transp-10: rgb(255 255 255 / 10%);

  --leu-color-accent-blue: #0076bd;
  --leu-color-accent-darkblue: #00407c;
  --leu-color-accent-turquoise: #00797b;
  --leu-color-accent-green: #1a7f1f;
  --leu-color-accent-bordeaux: #b01657;
  --leu-color-accent-magenta: #d40053;
  --leu-color-accent-violet: #7f3da7;
  --leu-color-accent-gray: var(--leu-color-black-60);

  --leu-color-accent-blue-soft: #edf5fa;
  --leu-color-accent-darkblue-soft: #e0e8ee;
  --leu-color-accent-turquoise-soft: #e8f3f2;
  --leu-color-accent-green-soft: #ebf6eb;
  --leu-color-accent-bordeaux-soft: #f6e3ea;
  --leu-color-accent-magenta-soft: #fcedf3;
  --leu-color-accent-violet-soft: #ece2f1;
  --leu-color-accent-gray-soft: var(--leu-color-black-10);

  --leu-color-func-cyan: #009ee0;
  --leu-color-func-red: #d93c1a;
  --leu-color-func-green: #1a7f1f;

  --leu-font-family-regular: HelveticaNowRegular, Helvetica, sans-serif; /* stylelint-disable-line value-keyword-case */
  --leu-font-family-black: HelveticaNowBlack, Arial Black, Helvetica, sans-serif; /* stylelint-disable-line value-keyword-case */

  --leu-box-shadow-short: 0px 0px 2px var(--leu-color-black-transp-40);
  --leu-box-shadow-regular: 0px 0px 16px var(--leu-color-black-transp-20);
  --leu-box-shadow-long: 0px 0px 80px var(--leu-color-black-transp-20);

  @leu-font-styles './font-definitions.json';
}

